# AwsTools

./: .gitignore  main.py  pyproject.toml  requirements.txt  run_app.py  run_mfa_ui.py
.claude/: settings.json
.claude/skills/search-alert-error-request/: SKILL.md
.claude/skills/search-cloudwatch-logs/: SKILL.md
CloudWatch/: CloudWatchUi.qss  LogGroupDownloader.py  SearchCloudWatchIdGenLogs.py  SearchCloudWatchLogs.py  SearchCloudWatchTimeoutRequest.py  cloud_watch_dataclass.py  cloud_watch_helper.py  cloud_watch_ui_helper.py
CloudWatch/LambdaRequestLog/: AlertDataclass.py  AnalyzeAlertLog.py  LambdaErrDataclass.py  SearchAlertErrorRequest.py  SearchAlertErrorRequest.qss  SearchAlertErrorRequestUI.py
DynamoDB/: DownloadTableFromS3.py  dynamodb_helper.py  pa_dynamodb_helper.py
GameLift/: env_fleet_status_fetcher.py  env_fleet_status_fetcher_async.py  fleet_info_consts.py  fleet_info_types.py
IAM/: aws_mfa.py
Lambda/: get_lambda_info.py  get_lambda_info_async.py  lambda_currency_poller.py  lambda_info_types.py  set_lambda_concurrency_async.py
PAClientLogPerser/: pa_client_log_reader.py
S3/: s3_downloader.py  s3_helper.py
UI/: app.py  styles.py  theme.qss
UI/mfa/: mfa_controller.py  mfa_widget.py  mfa_worker.py  profile_card.py
services/mfa/: config_store.py  profile_parser.py  sts_service.py
utils/: aws_aiosession_helper.py  aws_client_error_handler.py  aws_client_helper.py  aws_consts.py  aws_consts_profile.py  aws_urls.py  exec_env_util.py  logging_helper.py  poller_base.py  proxy_helper.py
utils/TablePrinter/: table_printer.py
