[project]
name = "awstools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=3.0.0",
    "amazon-ion>=0.13.0",
    "boto3>=1.42.5",
    "dataclasses-json>=0.6.7",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
