[project]
name = "awstools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=3.0.0",
    "amazon-ion>=0.13.0",
    "boto3>=1.42.5",
    "dataclasses-json>=0.6.7",
    "pyqt5>=5.15.11",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[tool.uv]
# Ensures packages have wheels for both Linux and macOS
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

